<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rt1_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for RT1 robot</description>
  <maintainer email="anhrisn@gmail.com">Anhar Risnumawan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rosrt_rt1</depend>
  <depend>rt1_hardware</depend>
  <depend>rt1_drivers</depend>
  <depend>urg_node2</depend>
  <depend>rt1_description</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>slam_toolbox</depend>
  <depend>rviz2</depend>

  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>