<?xml version="1.0"?>
<package format="3">
  <name>rt1_drivers</name>
  <version>0.1.0</version>
  <description>
    Drivers for the RT1 robot, including Hokuyo LiDAR and serial communication interfaces.
  </description>

  <!-- Maintainer Information -->
  <maintainer email="anhrisn@gmail.com">Anhar</maintainer>

  <!-- License Information -->
  <license>MIT</license>

  <!-- Build Tool Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>urg_node</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- Execution Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Optional: Test Dependencies -->
  <!--
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  -->

  <!-- Export Information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>